# libds-c

./: .clang-tidy  .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  makefile
.github/: CONTRIBUTING.md
.github/workflows/: format-check.yml  lint-pr.yml  release.yml  update-changelog.yml
cmake/: AddLibrary.cmake  ClangFormat.cmake  ClangTidy.cmake  CompilerFlags.cmake  CppCheck.cmake  Dependencies.cmake  Docs.cmake
docs/: Doxyfile
include/: ds_array.h  ds_common.h  ds_stack.h  ds_string.h  libds-c.h  libds_c.h
scripts/: setup.sh
test/: main.c
